Bug 435350 - X-Plasma-Request-Actions-Once does not work reliably with wildcard services
Summary: X-Plasma-Request-Actions-Once does not work reliably with wildcard services
Status: RESOLVED FIXED
Alias: None
Product: frameworks-krunner
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-04 17:23 UTC by Kai Uwe Broulik
Modified: 2022-01-30 08:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.85
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2021-04-04 17:23:17 UTC
A DBus runner can specify X-Plasma-Request-Actions-Once which means that its actions are only queried once on loading.

However, when using a DBus runner with wildcard service, it will keep a list of matching services to be queried. If no matching service exists at the time the runner is loaded, no actions will ever be queried.

STEPS TO REPRODUCE
1. Have p-b-i installed and all
2. Kill krunner
3. Don't launch the browser
4. Type a krunner query
5. Start the browser
6. Play a video or some other audio
7. Search for that tab

OBSERVED RESULT
A tab result with audio indicator but no "mute" button will be listed

EXPECTED RESULT
A tab result with audio indicator and "mute" button will be listed

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: git master as of 2021-04-04